# beam

./: .travis.yml  CMakeLists.txt  appveyor.yml
android/: jni.cpp  node_model.cpp  node_model.h
beam/: cli.cpp
core/: CMakeLists.txt  block_crypt.cpp  block_crypt.h  ecc_native.h  fly_client.cpp  fly_client.h
explorer/: CMakeLists.txt  adapter.cpp  server.cpp
hw_crypto/: misc.h
hw_crypto/unittest/: CMakeLists.txt  hw_crypto_manual_test.cpp  local_test_utils.h  pure_test_functions.h
keykeeper/: hw_wallet.cpp
mnemonic/: CMakeLists.txt
node/: node.cpp  node.h  node_client.cpp  node_client.h
pow/: CMakeLists.txt  equihash.cpp  external_pow.h  external_pow_stub.cpp  miner_client.cpp  opencl_frontend.cpp  opencl_frontend.h  opencl_pow.cpp  opencl_pow.h  stratum_server.cpp  supported_cards.cpp
pow/unittests/: server_stub.cpp  stratum_test.cpp
ui/: CMakeLists.txt
ui/model/: node_model.cpp  node_model.h  settings.cpp  settings.h
ui/translations/: english.ts
ui/viewmodel/: settings_view.cpp  start_view.cpp  wallet_view.cpp
utility/: CMakeLists.txt  options.cpp  options.h
utility/cli/: options.cpp  options.h
utility/io/: reactor.cpp
wallet/: CMakeLists.txt  cli.cpp  common.h  default_peers.cpp  oneside_transaction.cpp  oneside_transaction.h  wallet.cpp  wallet.h  wallet_db.cpp  wallet_db.h  wallet_direct_io.cpp  wallet_direct_io.h  wallet_network.cpp  wallet_network.h  wallet_transaction.cpp  wallet_transaction.h
wallet/unittests/: wallet_test.cpp
